# Gender-and-Age-Detection

./: package-lock.json
Backend/: .gitignore  db.sqlite3  pyproject.toml
Backend/ASMP/: apps.py  views.py
Backend/Backend/: settings.py  urls.py
Frontend/: package-lock.json
Frontend/src/: App.js
Frontend/src/Components/Authentication/: login.jsx  register.jsx
Frontend/src/Components/home/: eventCard.jsx
asmp/: package.json
